style.css
body {
  margin: 0px;
  font-family: Helvetica, Arial, sans-serif;
}

.topbar {
  display: flex;
  justify-content: space-between;
  align-items: start;
  padding: 20px 40px;
  box-sizing: border-box;
  font-size: 36px;
  width: 100%;
  /* background-color: aquamarine; */
}


a {
  text-decoration: none;
  color: black;
}

.box {
  flex: 0 0 calc((100% - 9 * 10px) / 10);
  /* 10 kolommen - gap wordt meegenomen */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  padding: 10px;
  box-sizing: border-box;
}

.number {
  font-size: 70px;
  margin-bottom: 5px;
  flex-shrink: 0;
}

.list-img {
  /* Set the max height to a specific value, max-width to 100% and the auto's will automatically size the image correctly */
  max-height: 300px;
  max-width: 100%;
  width: auto;
  height: auto;
  object-fit: contain;
}

.image-wrapper {
  flex-grow: 1;
  /*let the image-wrapper take all available space aka grow */
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.container {
  display: flex;
  flex-wrap: wrap;
  /* nooit naar nieuwe rij */
  justify-content: space-between;
  width: 100%;
  gap: 10px;
  padding: 20px;
  box-sizing: border-box;
}

#jaar {
  position: absolute;
  top: 0;
  font-size: 300px;
  font-weight: 500;
  z-index: 20;
  pointer-events: none;
}

#introduction {
  position: absolute;
  bottom: 100px;
  right: 100px;
  width: 40%;
  font-size: 20px;
  font-weight: 500;
  z-index: 10;
  font-family: "HomeSweetHome";
  pointer-events: none;
}

#introduction p {
  margin-top: 0;
}

#introduction span {
  font-size: 35px;
}

.oval-container {
  pointer-events: auto;
}

.h-scroll {
  display: flex;
  position: relative;
  overflow-x: scroll;
  scroll-snap-type: x mandatory;
  top: 70px;
  height: 90vh;
  /* background-color: aqua; */

}

.topbar-book {
  position: fixed;
  width: 100%;
  top: 0px;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: start;
  padding: 20px 40px;
  background-color: white;

  font-family: helvetica, Arial, sans-serif;
  font-size: 30px;
  /* zelfde als nummers */
  font-weight: 400;
}

.h-100 {
  max-height: 100%;
}

.boekpagina {
  height: 100%;
  max-height: 100vh;
  scroll-snap-align: start;
  position: relative;
  flex-shrink: 0;
}

/* Fonts */
@font-face {
  font-family: "HomeSweetHome";
  src: url("./fonts/Home\ Sweet\ Home.otf");
}

/* index.html */
.item {
  position: absolute;
  top: 250px;
  left: 250px;
  width: 200px;
  height: auto;
  offset-path: path('M 500 0 A 500 250 0 1 1 500 500 A 500 250 0 1 1 500 0');
  /* Keeps the image upright (0deg) relative to the screen */
  offset-rotate: 0deg;
  /* Animate along the path */
  animation: move-on-path 30s linear infinite;
  z-index: 10;
}

/* Pause the entire container rotation when hovering any image */
.oval-container:has(img:hover) {
  animation-play-state: paused;
}

/* Also pause all items' counter-rotation */
.oval-container:has(img:hover) .item {
  animation-play-state: paused;
}

@media(max-width: 1024px) {
  #jaar {
    font-size: 125px;
  }

  #introduction span {
    font-size: 20px;
  }

  #introduction {
    font-size: 15px;
    right: 25px;
    bottom: 25px;
    width: 55%;
  }

  .item {
    width: 200px;
    left: 200px;
  }
}

@media(max-width: 550px) {
  #jaar {
    font-size: 100px
  }

  #introduction span {
    font-size: 20px;
  }

  #introduction {
    font-size: 8px;
    right: 25px;
    bottom: 25px;
    width: 55%;
  }

  .item {
    offset-path: path('M 200 0 A 200 100 0 1 1 200 200 A 200 100 0 1 1 200 0');
    width: 100px;
    top: 200px;
    left: 100px
  }
}

